<resources>
    <string name="app_name">Design5</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_department">Add Department</string>
    <string name="id">Id</string>
    <string name="address">Address</string>
    <string name="salary">Salary</string>
    <string name="job">Job</string>
    <string name="submit">Submit</string>
    <string name="number">Number</string>
    <string name="descriptio">Description</string>
    <string name="name">Name</string>
</resources>
