<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.order.design5.Employee"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingStart="30dp"
    android:paddingRight="30dp"
    android:paddingEnd="30dp"
    android:background="@drawable/b">

    <EditText
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName"
        android:hint="@string/address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:inputType="numberDecimal"
        android:hint="@string/salary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:ems="10"
        android:layout_marginBottom="30dp"
        android:inputType="textPersonName"
        android:hint="@string/job" />

    <Button
        android:id="@+id/submit1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:onClick="submit"/>


</LinearLayout>
