<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.order.design5.Department"
    android:orientation="vertical"
    android:paddingRight="30dp"
    android:paddingEnd="30dp"
    android:paddingLeft="30dp"
    android:paddingStart="30dp"
    android:background="@drawable/b">


    <EditText
        android:id="@+id/numb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/number"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/name"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/des"
        android:inputType="textPersonName"
        android:hint="@string/descriptio"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/submit2"
        android:onClick="submit2"
        android:text="@string/submit"
        android:layout_marginTop="20dp"/>
</LinearLayout>
